FWK-91 Review PMD reports and resolve violations
git-svn-id: http://svn.code.sf.net/p/jcaptcha/code/trunk@471 eaf2ec09-4c2e-0410-84d0-fe0bfca4863a